# doc2quarto

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SUPPORT.md
.github/: SECURITY.md  dependabot.yml  labeler.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: greetings.yml  labeler.yml  main.yml  release.yml  security-audit.yml
dest/: QuantumComputing.qmd
src/: lib.rs  main-clap.rs  main.rs  main.rustimator.rs  main.working.rs
tests/: integration_test.rs
tests/fixtures/: QuantumComputing.md
