[package]
name = "doc2quarto"
version = "0.1.0"
edition = "2024"

[lib]
name = "doc2quarto"
path = "src/lib.rs"

[[bin]]
name = "doc2quarto"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.18.1"
regex = "1.12.2"
tempfile = "3.23.0"
walkdir = "2.5.0"
