[package]
name = "doc2quarto"
version = "0.1.2"
edition = "2024"
authors = ["Rakesh Venkat qubitai.in@gmail.com"]
description = "CLI tool to conver Docusaurus markdown files to quarto format"
license = "MIT"
repository = "https://github.com/rvbug/doc2quarto"
homepage = "https://github.com/rvbug/doc2quarto"
documentation = "https://docs.rs/doc2quarto"
readme = "README.md"
keywords = ["markdown", "docusaurus", "quarto", "cli","converter"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "text_input/*",
    "text_output/*",
    ".github/*"
  ]

[lib]
name = "doc2quarto"
path = "src/lib.rs"

[[bin]]
name = "doc2quarto"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.18.1"
regex = "1.12.2"
tempfile = "3.24.0"
walkdir = "2.5.0"
